# timeseries_etl

./: .gitignore  README.md  alert_dynamics.py  ciao.txt  create_db.bat  data_plots.py  data_preparation.py  download.py  eda.md  parameters.yaml  pyproject.toml  report.py  requirements.txt  retrieve_metrics.py  run.bat  run_pipeline.py  s3conn.py  sindy.py  sindy_training.py  testS3.py  torte_plots.py
configs/: SINDY.yaml  config_report.yaml
dbt/: dbt_project.yml  parse_dbt_json.py  profile.yml  run_dbt_monitored.py
dbt/models/: control.py  thermal_model.py
dbt/models/marts/: after_sindy.sql  all_static.sql  dynamic.sql  static.sql
dbt/models/serving/: serving.sql
dbt/models/staging/: raw_est.sql  raw_incl.sql  raw_spost.sql  raw_temp.sql  stg_acc.sql  stg_spost.sql
docs/: CONTRACTS.md  RUN_GUIDE.md
outputs/: kpis.json
processing/: data_handling.py  run_pipeline.py
sindy/: functions.py  pipeline.py  prediction.py  sindy.py  training.py
src/timeseries_etl/: __init__.py  cli.py
src/timeseries_etl/agent/: __init__.py
src/timeseries_etl/config/: __init__.py  loader.py
src/timeseries_etl/domain/: __init__.py  constants.py  events.py  labels.py  prep.py  stats.py
src/timeseries_etl/io/: __init__.py  duckdb_s3.py
src/timeseries_etl/pipeline/: __init__.py  orchestrate.py  (+4 more)
statsmodels/: main.py
templates/: A4_Template.docx  template.dotx
templates/description/: P001_description.docx  P002_description.docx  P003_description.docx  P004 description.docx  P005_description.docx
tests/: __init__.py  test_config.py  test_domain.py  test_events.py
